12_playground/_archive/archive_otherprojects/sporx/keycloak/old/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "keycloak.192-168-49-2.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: keycloak
            port: 
              number: 8080
